project('liblexilla', 'cpp',
       default_options : ['cpp_std=c++17'])

srcs=files([
  'src/Lexilla.cxx',
  'lexlib/Accessor.cxx',
  'lexlib/Accessor.h',
  'lexlib/CatalogueModules.h',
  'lexlib/CharacterCategory.cxx',
  'lexlib/CharacterCategory.h',
  'lexlib/CharacterSet.cxx',
  'lexlib/CharacterSet.h',
  'lexlib/DefaultLexer.cxx',
  'lexlib/DefaultLexer.h',
  'lexlib/LexAccessor.cxx',
  'lexlib/LexAccessor.h',
  'lexlib/LexerBase.cxx',
  'lexlib/LexerBase.h',
  'lexlib/LexerModule.cxx',
  'lexlib/LexerModule.h',
  'lexlib/LexerNoExceptions.cxx',
  'lexlib/LexerNoExceptions.h',
  'lexlib/LexerSimple.cxx',
  'lexlib/LexerSimple.h',
  'lexlib/OptionSet.h',
  'lexlib/PropSetSimple.cxx',
  'lexlib/PropSetSimple.h',
  'lexlib/SparseState.h',
  'lexlib/StringCopy.h',
  'lexlib/StyleContext.cxx',
  'lexlib/StyleContext.h',
  'lexlib/SubStyles.h',
  'lexlib/WordList.cxx',
  'lexlib/WordList.h',
'lexers/LexA68k.cxx',
'lexers/LexAPDL.cxx',
'lexers/LexASY.cxx',
'lexers/LexAU3.cxx',
'lexers/LexAVE.cxx',
'lexers/LexAVS.cxx',
'lexers/LexAbaqus.cxx',
'lexers/LexAda.cxx',
'lexers/LexAsm.cxx',
'lexers/LexAsn1.cxx',
'lexers/LexBaan.cxx',
'lexers/LexBash.cxx',
'lexers/LexBasic.cxx',
'lexers/LexBatch.cxx',
'lexers/LexBibTeX.cxx',
'lexers/LexBullant.cxx',
'lexers/LexCIL.cxx',
'lexers/LexCLW.cxx',
'lexers/LexCOBOL.cxx',
'lexers/LexCPP.cxx',
'lexers/LexCSS.cxx',
'lexers/LexCaml.cxx',
'lexers/LexCmake.cxx',
'lexers/LexCoffeeScript.cxx',
'lexers/LexConf.cxx',
'lexers/LexCrontab.cxx',
'lexers/LexCsound.cxx',
'lexers/LexD.cxx',
'lexers/LexDMAP.cxx',
'lexers/LexDMIS.cxx',
'lexers/LexDataflex.cxx',
'lexers/LexDiff.cxx',
'lexers/LexECL.cxx',
'lexers/LexEDIFACT.cxx',
'lexers/LexEScript.cxx',
'lexers/LexEiffel.cxx',
'lexers/LexErlang.cxx',
'lexers/LexErrorList.cxx',
'lexers/LexFSharp.cxx',
'lexers/LexFlagship.cxx',
'lexers/LexForth.cxx',
'lexers/LexFortran.cxx',
'lexers/LexGAP.cxx',
'lexers/LexGui4Cli.cxx',
'lexers/LexHTML.cxx',
'lexers/LexHaskell.cxx',
'lexers/LexHex.cxx',
'lexers/LexHollywood.cxx',
'lexers/LexIndent.cxx',
'lexers/LexInno.cxx',
'lexers/LexJSON.cxx',
'lexers/LexJulia.cxx',
'lexers/LexKVIrc.cxx',
'lexers/LexKix.cxx',
'lexers/LexLaTeX.cxx',
'lexers/LexLisp.cxx',
'lexers/LexLout.cxx',
'lexers/LexLua.cxx',
'lexers/LexMMIXAL.cxx',
'lexers/LexMPT.cxx',
'lexers/LexMSSQL.cxx',
'lexers/LexMagik.cxx',
'lexers/LexMake.cxx',
'lexers/LexMarkdown.cxx',
'lexers/LexMatlab.cxx',
'lexers/LexMaxima.cxx',
'lexers/LexMetapost.cxx',
'lexers/LexModula.cxx',
'lexers/LexMySQL.cxx',
'lexers/LexNim.cxx',
'lexers/LexNimrod.cxx',
'lexers/LexNsis.cxx',
'lexers/LexNull.cxx',
'lexers/LexOScript.cxx',
'lexers/LexOpal.cxx',
'lexers/LexPB.cxx',
'lexers/LexPLM.cxx',
'lexers/LexPO.cxx',
'lexers/LexPOV.cxx',
'lexers/LexPS.cxx',
'lexers/LexPascal.cxx',
'lexers/LexPerl.cxx',
'lexers/LexPowerPro.cxx',
'lexers/LexPowerShell.cxx',
'lexers/LexProgress.cxx',
'lexers/LexProps.cxx',
'lexers/LexPython.cxx',
'lexers/LexR.cxx',
'lexers/LexRaku.cxx',
'lexers/LexRebol.cxx',
'lexers/LexRegistry.cxx',
'lexers/LexRuby.cxx',
'lexers/LexRust.cxx',
'lexers/LexSAS.cxx',
'lexers/LexSML.cxx',
'lexers/LexSQL.cxx',
'lexers/LexSTTXT.cxx',
'lexers/LexScriptol.cxx',
'lexers/LexSmalltalk.cxx',
'lexers/LexSorcus.cxx',
'lexers/LexSpecman.cxx',
'lexers/LexSpice.cxx',
'lexers/LexStata.cxx',
'lexers/LexTACL.cxx',
'lexers/LexTADS3.cxx',
'lexers/LexTAL.cxx',
'lexers/LexTCL.cxx',
'lexers/LexTCMD.cxx',
'lexers/LexTeX.cxx',
'lexers/LexTxt2tags.cxx',
'lexers/LexVB.cxx',
'lexers/LexVHDL.cxx',
'lexers/LexVerilog.cxx',
'lexers/LexVisualProlog.cxx',
'lexers/LexX12.cxx',
'lexers/LexYAML.cxx',
'lexers/LexAsciidoc.cxx',
'lexers/LexGDScript.cxx'
])

liblexilla_inc = include_directories('include', '../scintilla/include', 'lexlib')
liblexilla = static_library('lexilla',
                            srcs,
                            include_directories : liblexilla_inc,
                            install : true)

liblexilla_dep = declare_dependency(include_directories : liblexilla_inc,
                                    link_with : liblexilla)
